fix overflow-y on resume section in about page.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -479,6 +479,7 @@ footer {
       }
       .table-wrapper {
         padding: 0 1.75rem;
+        overflow-y: unset;
         table {
           tr {
             display: flex;
